--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
             <div id="header">
                 <ul class="nav">
+                    <li><a href="">Preguntas</a>
+                        <ul>
                             <li><a href="pregunta 1.html">¿Qué es la virtualización?</a></li>
                             <li><a href="pregunta2.html">¿Cómo funciona la virtualización?</a></li>
                             <li><a href="pregunta3.html">Cite por lo menos 5 ejemplos donde se puede utilizar y/o aplicar la virtualización</a></li>
@@ -17,8 +19,11 @@
                                 dispositivos</a></li>
                             <li><a href="pregunta5.html">Exprese con una imagen lo que comprendió por virtualización, explique su gráfico</a></li>
                             <li><a href="pregunta6.html">¿Por qué es importante conocer el concepto y cómo se puede aplicar la virtualización como
-                                estrategia para optimizar los recursos físicos en el ambiente laboral y/o personal?</a></li>    
+                                estrategia para optimizar los recursos físicos en el ambiente laboral y/o personal?</a></li>      
                         </ul>
+                    </li>
+                    <ul>
+                </ul>
                     </li>
     
                     
